# tempemail

./: .gitignore  .py  pyproject.toml  run_tests.py
tempemail/: __init__.py  exceptions.py
tempemail/core/: controller.py  email_handler.py  env_handler.py  messeger.py  types.py  utils.py
tempemail/models/: email_data.py  user_model.py
tests_tempemail/: conftest.py
tests_tempemail/tests_core/: test_email_handler.py  test_env_handler.py  test_utils.py
